Made tooltip degrade more gracefully on IE. Fix for idea invite on user account page.
git-svn-id: http://svn.localprojects.net/gam2/trunk@1323 befef031-aaeb-48d0-b70f-681328309d3d

--- a/static/css/ie/tc.gam.ie.css
+++ b/static/css/ie/tc.gam.ie.css
@@ -23,7 +23,10 @@ table.resources-list .resource-name > span { display: block; vertical-align: bas
 table.resources-list .resource-name > span span { display: inline; vertical-align: baseline; font-size: 15px;}
 
 /* tooltips */
-.tooltip .tooltip-tail { 
+.tooltip .tooltip-bd {
+	border:1px solid #a5a5a5;
+}
+.tooltip .tooltip-tail {
 	filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(enabled='true',sizingMethod='crop',src='../images/tooltip_tail_bottom.png');
 }
 
